<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" 
  		android:background="#ffffff" >
  		
<!--  Header  Starts-->

  		<LinearLayout
  		    android:id="@+id/header"
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    android:paddingBottom="5dip"
  		    android:paddingTop="5dip" >

  				<!-- Logo Start-->
  				<ImageView android:src="@drawable/logo"
  							android:layout_width="wrap_content"
  							android:layout_height="wrap_content"
  							android:contentDescription="@string/logo" 							
  							android:layout_marginLeft="10dip"/>
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends -->  
  		
  		
  		<LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/header"
		    android:orientation="vertical"
		    android:padding="10dip" >

		
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:textStyle="bold"
		  		android:textSize="20sp"
		  		android:text="@string/welcome"/>
		 
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:paddingBottom="15dip"
		  		android:textColor="#372c24"
		  		android:textSize="15sp"
		  		android:text="@string/welcome2"/>
		  
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/mail"/>
		  <EditText android:id="@+id/emailAddress"
		      	android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:layout_marginBottom="20dip"
		  		android:inputType="textEmailAddress"
		  		android:singleLine="true"/>
		  
		  
		  <TextView android:id="@+id/password"
		      	android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/Pass"/>
		  <EditText android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:singleLine="true"
		  		android:inputType="textPassword"/>
		  
		  
		  <Button android:id="@+id/btnLogin" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="10dip"
		  		android:text="@string/SingIn"/>
		  
		  	
		  <TextView android:id="@+id/link_to_register" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="40dip"
		  		android:layout_marginBottom="40dip"
		  		android:text="@string/Reg"
		  		android:gravity="center"
		  		android:textSize="15sp"
		  		android:textColor="#0b84aa"/>
		    
		    <TextView android:id="@+id/Already_reg"  
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:textSize="10sp"
		  		android:text="@string/Already"
		  		android:textStyle="bold"/>
		    <TextView android:id="@+id/Change" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:text="@string/Change"
		  		android:textSize="10sp"
		  		android:textColor="#0b84aa"/>
		    
		    <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:textSize="10sp"
		  		android:text="@string/QoP"
		  		android:textStyle="bold"/>
		    <TextView android:id="@+id/QoP_Req" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:text="@string/QoPReq"
		  		android:textSize="10sp"
		  		android:textColor="#0b84aa"/>
		    
		    <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:textSize="10sp"
		  		android:text="@string/orTweet"
		  		android:textStyle="bold"/>
		    <TextView android:id="@+id/Tweet" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:text="@string/Tweet"
		  		android:textSize="10sp"
		  		android:textColor="#0b84aa"/>
		    
		</LinearLayout>
  				
  		
  </RelativeLayout>
</ScrollView>
