<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="#fff">
  		
  		<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:background="@layout/header_gradient"
  				android:paddingTop="5dip"
  				android:paddingBottom="5dip">
  				<!-- Logo Start-->

  				<ImageView
  				    android:layout_width="match_parent"
  				    android:layout_height="wrap_content"
  				    android:layout_marginLeft="10dip"
  				    android:contentDescription="@string/logo" 
  				    android:src="@drawable/logo" />

  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends --> 

  		
  		<!-- Registration Form -->
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:padding="10dip"
		  android:layout_below="@id/header">
		  
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:textStyle="bold"
		  		android:textSize="20sp"
		  		android:text="@string/SignUp2"/>
		    
		  <!-- Full Name Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/Username"/>
		  <EditText android:id="@+id/reg_user_name" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:inputType="text"
		  		android:singleLine="true"/>
		  <!--  Email Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/mail"/>
		  <EditText android:id="@+id/reg_email" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:inputType="textEmailAddress"
		  		android:singleLine="true"/>
		 
		<!-- Password Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/Pass"/>
		  <EditText android:id="@+id/reg_password" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:singleLine="true"
		  		android:inputType="textPassword"
		  		android:layout_marginTop="5dip"/>
		 
		 <!-- Confirm Password Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/PassConf"/>
		  <EditText android:id="@+id/reg_conf_password" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:singleLine="true"
		  		android:inputType="textPassword"
		  		android:layout_marginTop="5dip"/>
		 
		  <!-- Register Button -->		
		  <Button android:id="@+id/btnRegister" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="10dip"
		  		android:text="@string/SignUp"/>
		 					    
		    <TextView android:id="@+id/link_to_register"  
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#0b84aa"
		  		android:textSize="10sp"
		  		android:text="@string/AlreadySign"/>
		    
		    <TextView android:id="@+id/ForgotPass" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:text="@string/Forgot"
		  		android:textSize="10sp"
		  		android:textColor="#0b84aa"/>
		    
		    <TextView android:id="@+id/ConfirmInst" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#0b84aa"
		  		android:textSize="10sp"
		  		android:text="@string/Didnt"/>		  		 
		  
		    
		</LinearLayout>
  		<!-- Registration Form Ends -->
  		
  		
  </RelativeLayout>
</ScrollView>
