<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" 
  		android:background="#ffffff" >
  		
  		<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:background="@layout/header_gradient"
  				android:paddingTop="5dip"
  				android:paddingBottom="5dip">
  				<!-- Logo Start-->

  				<ImageView
  				    android:layout_width="match_parent"
  				    android:layout_height="wrap_content"
  				    android:layout_marginLeft="10dip"
  				    android:contentDescription="@string/logo" 
  				    android:src="@drawable/logo" />

  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends --> 

  		
  		<!-- Registration Form -->
		<LinearLayout
		  	xmlns:android="http://schemas.android.com/apk/res/android"
		  		android:orientation="vertical"
		  		android:layout_width="match_parent"
		  		android:layout_height="wrap_content"
		  		android:padding="10dip"
		  		android:background="@layout/header_gradient"
		  		android:layout_below="@id/header">
		  
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:textStyle="bold"
		  		android:textSize="20sp"
		  		android:text="@string/SignUp2"/>
		    
		  <!-- Full Name Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/Username"/>
		  <TextView android:id="@+id/reg_user_name_res" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:text="@string/mail"
		  		android:singleLine="true"/>
		  <!--  Email Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/mail"/>
		  <TextView android:id="@+id/reg_email_res" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:text="@string/mail"
		  		android:singleLine="true"/>
		 
		<!-- Password Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/Pass"/>
		  <TextView android:id="@+id/reg_password_res" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:singleLine="true"
		  		android:text="@string/mail"
		  		android:layout_marginTop="5dip"/>
		 
		 <!-- Confirm Password Label -->
		 
		  <CheckBox
            android:id="@+id/chekBox_teacher_reg_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/checkBoxTeacherReg"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0b84aa"
            android:typeface="serif" />
		  
		  <!-- Register Button -->		  		 
		  
		    
		</LinearLayout>
  		<!-- Registration Form Ends -->
  		
  		
  </RelativeLayout>
</ScrollView>
