<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@layout/header_gradient" >

 	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="?android:attr/listPreferredItemHeight"
	    android:padding="6dip">
	
	    <Button
	        android:id="@+id/rate_positive"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/txtview_rates"
	        android:layout_alignParentTop="true"
	        android:background="@drawable/button_positive" />
	
	    <TextView
	        android:id="@+id/txtview_rates"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/rate_positive"	        
	        android:text="@string/rate_number" />

	    <Button
	        android:id="@+id/rate_negative"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/txtview_rates"
	        android:background="@drawable/button_negative" />

	    <TextView
	        android:id="@+id/editText_SubjectQuestion_ShowQuestion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/editText_CourseQuestion_ShowQuestion"
	        android:layout_alignParentBottom="true"
	        android:singleLine="false"
	        android:text="@string/secondline"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/editText_CourseQuestion_ShowQuestion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/rate_positive"
	        android:layout_toRightOf="@+id/rate_positive"
	        android:ellipsize="marquee"
	        android:singleLine="false"
	        android:text="@string/firstline" />
	
	</RelativeLayout>
       
<!-- answers start -->
        <TextView
            android:id="@+id/editText_ContentQuestion_ShowQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/labelTypeContentQuestion"
            android:textAppearance="?android:attr/textAppearanceSmall"
             />
        
        <TextView
            android:id="@+id/editText_Author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:text="@string/post_author"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <TextView android:id="@+id/textView_AnswersTitleQuestion_ShowQuestionActivity" 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="5dp" 
                android:layout_marginRight="5dp" 
                android:layout_marginTop="3dp" 
                android:text="@string/label_AnswerTitle_show_question" 
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            
        </LinearLayout>

        <ListView
            android:id="@+id/listview_ShowQuestionActivity"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:scrollbars="vertical"/>
       

        <TextView
            android:id="@+id/textView_AnswersTitle_AnswerQuestionActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/label_Title_AddAnAnswer"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_AnswersSubTitle_AnswerQuestionActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_SubTitle_AddAnAnswer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/LinearLayout_AnswerComment_ShowQuestionActivity"
            android:orientation="horizontal" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/ButtonBar">

            <Button
                android:id="@+id/button_Answer_AnswerQuestionActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonAnswerQuestion"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/button_Comment_AnswerQuestionActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/buttonCommentQuestion"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

       
    </LinearLayout>
